--- a/index.html
+++ b/index.html
@@ -57,15 +57,11 @@
               </li>
 
               <li class="nav__item">
-                <a href="shop.html" class="nav__link">Shop</a>
+                <a href="shop.html" class="nav__link">Catalog</a>
               </li>
 
               <li class="nav__item">
                 <a href="accounts.html" class="nav__link">My Account</a>
-              </li>
-
-              <li class="nav__item">
-                <a href="#" class="nav__link" id="loginLink">Login</a>
               </li>
             </ul>
 
@@ -83,6 +79,10 @@
           </div>
 
           <div class="header__user-actions">
+            <a href="#" class="header__action-btn" id="loginLink">
+              <img src="assets/imgs/account-svgrepo-com.svg" alt="Account" />
+            </a>
+
             <a href="wishlist.html" class="header__action-btn">
               <img src="assets/imgs/icon-heart.svg" alt="" />
               <span class="count">3</span>
@@ -120,6 +120,36 @@
           <div class="form-footer">
             <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
             <a href="#" class="forgot-password">Forgot Password?</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Register Modal -->
+    <div class="login-modal" id="registerModal">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <div class="modal-header">
+          <h2>Create Account</h2>
+        </div>
+        <div class="modal-body">
+          <form class="register-form">
+            <div class="form-group">
+              <input type="text" placeholder="Full Name" required>
+            </div>
+            <div class="form-group">
+              <input type="email" placeholder="Email" required>
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" required>
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Confirm Password" required>
+            </div>
+            <button type="submit" class="login-btn">Create Account</button>
+          </form>
+          <div class="form-footer">
+            <p>Already have an account? <a href="#" class="login-link">Login</a></p>
           </div>
         </div>
       </div>
@@ -226,7 +256,7 @@
                   </a>
                   <a href="#" class="card swiper-slide">
                       <img src="assets/imgs/gumigoogifahaha_.gif" alt="Product Image" class="category__img">
-                      <h3 class="category__title">OMG ITS FUCKING GUMIGOO</h3>
+                      <h3 class="category__title">OMG ITS GUMIGOO</h3>
                       <p class="price">AED 1.2M</p>
                   </a>
                     
