updated the filter

--- a/shop.html
+++ b/shop.html
@@ -167,181 +167,208 @@
             <!-- Active Filters -->
             <div class="active-filters">
               <div class="filter-tag">
-                <span>Tag for Brand</span>
+                <span>Age Range: 0-6 months</span>
                 <button class="remove-tag">×</button>
               </div>
               <div class="filter-tag">
-                <span>Tag for Clothes</span>
+                <span>Category: Clothing</span>
                 <button class="remove-tag">×</button>
               </div>
               <div class="filter-tag">
-                <span>Tag for Clothes Size</span>
+                <span>Size: 3-6M</span>
                 <button class="remove-tag">×</button>
+              </div>
+            </div>
+
+            <!-- Category Filter -->
+            <div class="filter-section">
+              <h3>Category</h3>
+              <div class="search-box">
+                <input type="text" placeholder="Search categories...">
+                <i class="fi fi-rs-search"></i>
+              </div>
+              <div class="filter-options">
+                <label class="checkbox-label">
+                  <input type="checkbox" checked>
+                  <span>Baby Clothing</span>
+                  <span class="count">(206)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Pet Accessories</span>
+                  <span class="count">(126)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Baby Care</span>
+                  <span class="count">(86)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Pet Food</span>
+                  <span class="count">(164)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Baby Toys</span>
+                  <span class="count">(116)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Pet Toys</span>
+                  <span class="count">(92)</span>
+                </label>
+              </div>
+              <button class="show-more">+ Show more</button>
+            </div>
+
+            <!-- Age/Size Range Filter -->
+            <div class="filter-section">
+              <h3>Age/Size Range</h3>
+              <div class="filter-options">
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Newborn (0-3M)</span>
+                  <span class="count">(126)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox" checked>
+                  <span>3-6 Months</span>
+                  <span class="count">(136)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>6-12 Months</span>
+                  <span class="count">(154)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>1-2 Years</span>
+                  <span class="count">(148)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>2-3 Years</span>
+                  <span class="count">(182)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Pet (XS-XL)</span>
+                  <span class="count">(206)</span>
+                </label>
               </div>
             </div>
 
             <!-- Brand Filter -->
             <div class="filter-section">
-              <h3>Brand</h3>
+              <h3>Popular Brands</h3>
               <div class="search-box">
-                <input type="text" placeholder="Search for brands...">
+                <input type="text" placeholder="Search brands...">
                 <i class="fi fi-rs-search"></i>
               </div>
               <div class="filter-options">
                 <label class="checkbox-label">
                   <input type="checkbox" checked>
-                  <span>Tokyo Talkies</span>
+                  <span>Carter's</span>
                   <span class="count">(206)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>Roadster</span>
-                  <span class="count">(26)</span>
+                  <span>Gerber</span>
+                  <span class="count">(126)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>Here&Now</span>
-                  <span class="count">(706)</span>
+                  <span>Royal Canin</span>
+                  <span class="count">(106)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>High Star</span>
-                  <span class="count">(64)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span>Miss Chase</span>
-                  <span class="count">(16)</span>
+                  <span>Pedigree</span>
+                  <span class="count">(164)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>Voxati</span>
-                  <span class="count">(20)</span>
+                  <span>Fisher-Price</span>
+                  <span class="count">(116)</span>
+                </label>
+                <label class="checkbox-label">
+                  <input type="checkbox">
+                  <span>Kong</span>
+                  <span class="count">(120)</span>
                 </label>
               </div>
-              <button class="show-more">+ 40 more</button>
+              <button class="show-more">+ Show more</button>
             </div>
 
             <!-- Price Filter -->
             <div class="filter-section">
-              <h3>Price</h3>
+              <h3>Price Range</h3>
               <div class="filter-options">
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>$50 to $100</span>
-                  <span class="count">(26)</span>
+                  <span>Under $20</span>
+                  <span class="count">(126)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox" checked>
-                  <span>$100 to $500</span>
-                  <span class="count">(36)</span>
+                  <span>$20 - $50</span>
+                  <span class="count">(136)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>$500 to $1000</span>
-                  <span class="count">(54)</span>
+                  <span>$50 - $100</span>
+                  <span class="count">(154)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>$1000 to $1500</span>
+                  <span>$100 - $200</span>
                   <span class="count">(148)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>$1500 to $2000</span>
-                  <span class="count">(182)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox">
-                  <span>$2000 to $2500</span>
-                  <span class="count">(206)</span>
+                  <span>$200 & Above</span>
+                  <span class="count">(82)</span>
                 </label>
               </div>
             </div>
 
-            <!-- Color Filter -->
+            <!-- Material/Type Filter -->
             <div class="filter-section">
-              <h3>Color</h3>
-              <div class="search-box">
-                <input type="text" placeholder="Search for colors...">
-                <i class="fi fi-rs-search"></i>
-              </div>
-              <div class="filter-options">
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox" checked>
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-                <label class="checkbox-label">
-                  <input type="checkbox">
-                  <span class="color-box blue"></span>
-                  <span>Blue</span>
-                  <span class="count">(206)</span>
-                </label>
-              </div>
-              <button class="show-more">+ 40 more</button>
-            </div>
-
-            <!-- Discount Range Filter -->
-            <div class="filter-section">
-              <h3>Discount Range</h3>
+              <h3>Material/Type</h3>
               <div class="filter-options">
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>10% and above</span>
-                  <span class="count">(26)</span>
+                  <span>100% Cotton</span>
+                  <span class="count">(226)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>20% and above</span>
-                  <span class="count">(62)</span>
+                  <span>Organic</span>
+                  <span class="count">(162)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>30% and above</span>
-                  <span class="count">(20)</span>
+                  <span>Hypoallergenic</span>
+                  <span class="count">(120)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>40% and above</span>
+                  <span>Natural</span>
                   <span class="count">(106)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox" checked>
-                  <span>50% and above</span>
-                  <span class="count">(32)</span>
+                  <span>Grain Free</span>
+                  <span class="count">(132)</span>
                 </label>
                 <label class="checkbox-label">
                   <input type="checkbox">
-                  <span>60% and above</span>
-                  <span class="count">(46)</span>
+                  <span>BPA Free</span>
+                  <span class="count">(146)</span>
                 </label>
               </div>
+              <button class="show-more">+ Show more</button>
             </div>
           </div>
 
