changed product imgs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- PRE LOADER -->
-    <div class="pre-loader">
+    <!-- <div class="pre-loader">
         <div class="content">
             <div class="pre-loader-container">
                 <img class="pre-logo-img" src="assets/imgs/logo-pre-loader.png" alt="">
@@ -29,7 +29,7 @@
             </div>
             <div class="loader"></div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- NAV BAR  -->
@@ -206,7 +206,7 @@
                   <p>Dog Collar</p>
               </div>
               <div class="card more">
-                  <a href="">
+                  <a href="shop.html">
                       <img src="assets/imgs/featured-category-more.png" alt="">
                   </a>
               </div>
@@ -220,44 +220,44 @@
           <div class="trending-container swiper">
               <div class="cards swiper-wrapper">
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="assets/imgs/product-11-1.jpg" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Casper and Pearl Dog Bowl</h3>
+                      <p class="price">DHS. 25</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://totntales.com/cdn/shop/products/1_3bfbf460-1555-4aca-b6e8-bf5bdde3ee49_720x.jpg?v=1673180383" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Anvi Baby Organic Zipper Romper- Glacier Blue</h3>
+                      <p class="price">DHS. 99</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://howlandgrowl.com/cdn/shop/products/MC_G10-004-02_Scratch_Volto_alu_silver_anodized_felt_grey_700x.jpg?v=1585056673" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Volto Cat Wall Scratcher</h3>
+                      <p class="price">DHS. 1,000</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://howlandgrowl.com/cdn/shop/products/MC_G02-003-01_Sleep_Capello_cat_bed_grey-black_700x.jpg?v=1576145252" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Capello Cat Bed</h3>
+                      <p class="price">DHS. 485</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://totntales.com/cdn/shop/products/1_6bddf8e0-0a30-40c0-9819-8e156df65fea_720x.jpg?v=1673157275" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Anvi Baby Set of 3 Organic Bamboo Face Cloth- Unicorn</h3>
+                      <p class="price">DHS. 75.50</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://totntales.com/cdn/shop/files/MTHR6-12mPENGUINGREY_1_720x.jpg?v=1689542056" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Hooded Bathrobe – Penguin</h3>
+                      <p class="price">DHS. 179.20</p>
                   </a>
                   <a href="#" class="card swiper-slide">
-                      <img src="assets/imgs/featured-category-img(1).png" alt="Product Image" class="category__img">
-                      <h3 class="category__title">Juniors 12-Piece Bunny Print Clothing Gift Set</h3>
-                      <p class="price">AED 99</p>
+                      <img src="https://howlandgrowl.com/cdn/shop/files/LEA2015-1_700x.jpg?v=1729755483" alt="Product Image" class="category__img">
+                      <h3 class="category__title">Ocean Marine Rope Dog Lead</h3>
+                      <p class="price">DHS. 250</p>
                   </a>
                   <a href="#" class="card swiper-slide">
                       <img src="assets/imgs/gumigoogifahaha_.gif" alt="Product Image" class="category__img">
                       <h3 class="category__title">OMG ITS GUMIGOO</h3>
-                      <p class="price">AED 1.2M</p>
+                      <p class="price">DHS. 1.2M</p>
                   </a>
                     
 
