updated product prices and corrected text formatting in index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <h1 class="landing-title">ANAK <br> ESSENTIALS</h1>
 
               <div class="landing-text">
-                  <p>Welcome to ANAK – your trusted destination for quality baby and pet products. From cozy blankets to playful toys and everyday essentials, we’re here to help you care for the little ones you love most – whether they giggle or purr.</p>
+                  <p>Welcome to ANAK – your trusted destination for quality baby and pet products. From cozy blankets to playful toys and everyday essentials, we're here to help you care for the little ones you love most – whether they giggle or purr.</p>
 
                   <button>Lets Get Started</button>
               </div>
@@ -346,8 +346,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 250</span>
-                    <span class="old__price">DHS. 275</span>
+                    <span class="new__price">DHS. 89.99</span>
+                    <span class="old__price">DHS. 119.99</span>
                   </div>
 
                   <a
@@ -404,8 +404,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 149.99</span>
+                    <span class="old__price">DHS. 179.99</span>
                   </div>
 
                   <a
@@ -462,8 +462,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 29.99</span>
+                    <span class="old__price">DHS. 39.99</span>
                   </div>
 
                   <a
@@ -520,8 +520,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 129.99</span>
+                    <span class="old__price">DHS. 159.99</span>
                   </div>
 
                   <a
@@ -578,8 +578,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 34.99</span>
+                    <span class="old__price">DHS. 44.99</span>
                   </div>
 
                   <a
@@ -636,8 +636,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 139.99</span>
+                    <span class="old__price">DHS. 169.99</span>
                   </div>
 
                   <a
@@ -694,8 +694,8 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">DHS. 238.85</span>
-                    <span class="old__price">DHS. 245.8</span>
+                    <span class="new__price">DHS. 199.99</span>
+                    <span class="old__price">DHS. 249.99</span>
                   </div>
 
                   <a
