splash screen back

--- a/cart.html
+++ b/cart.html
@@ -180,18 +180,18 @@
 
               <td>
                 <h3 class="table__title">
-                  J.Crew Mercantile Women's Short-Sleeve
+                  Marmum chocolate colored dog collar
                 </h3>
                 <p class="table__description">
-                  Maboriosam in a tonto nesciung eget distingy magndapibus.
+                  Make your dog look cool and stylish.
                 </p>
               </td>
 
-              <td><span class="table__price">$110</span></td>
+              <td><span class="table__price">DHS. 55.50</span></td>
 
               <td><input type="number" value="3" class="quantity" /></td>
 
-              <td><span class="table__subtotal">$220</span></td>
+              <td><span class="table__subtotal">DHS. 315</span></td>
 
               <td><i class="fi fi-rs-trash table__trash"></i></td>
             </tr>
@@ -206,17 +206,17 @@
               </td>
 
               <td>
-                <h3 class="table__title">Amazon Essentials Women's Tank</h3>
+                <h3 class="table__title">Very noice Dog Bed</h3>
                 <p class="table__description">
-                  Maboriosam in a tonto nesciung eget distingy magndapibus.
+                  It is a bed for the doggies.
                 </p>
               </td>
 
-              <td><span class="table__price">$110</span></td>
+              <td><span class="table__price">DHS. 225</span></td>
 
-              <td><input type="number" value="3" class="quantity" /></td>
+              <td><input type="number" value="1" class="quantity" /></td>
 
-              <td><span class="table__subtotal">$220</span></td>
+              <td><span class="table__subtotal">DHS. 225</span></td>
 
               <td><i class="fi fi-rs-trash table__trash"></i></td>
             </tr>
@@ -232,18 +232,18 @@
 
               <td>
                 <h3 class="table__title">
-                  Amazon Brand - Daily Ritual Women's Jersey
+                  Baby PJ Baron - Leaf Shirt
                 </h3>
                 <p class="table__description">
-                  Maboriosam in a tonto nesciung eget distingy magndapibus.
+                  Very dripy...
                 </p>
               </td>
 
-              <td><span class="table__price">$110</span></td>
+              <td><span class="table__price">DHS. 110</span></td>
 
-              <td><input type="number" value="3" class="quantity" /></td>
+              <td><input type="number" value="2" class="quantity" /></td>
 
-              <td><span class="table__subtotal">$220</span></td>
+              <td><span class="table__subtotal">DHS. 220</span></td>
 
               <td><i class="fi fi-rs-trash table__trash"></i></td>
             </tr>
@@ -321,17 +321,17 @@
             <table class="cart__total-table">
               <tr>
                 <td><span class="cart__total-title">Cart Subtotal</span></td>
-                <td><span class="cart__total-price">$240.00</span></td>
+                <td><span class="cart__total-price">DHS. 240.00</span></td>
               </tr>
 
               <tr>
                 <td><span class="cart__total-title">Shipping</span></td>
-                <td><span class="cart__total-price">$10.00</span></td>
+                <td><span class="cart__total-price">DHS. 10.00</span></td>
               </tr>
 
               <tr>
                 <td><span class="cart__total-title">Total</span></td>
-                <td><span class="cart__total-price">$250.00</span></td>
+                <td><span class="cart__total-price">DHS. 250.00</span></td>
               </tr>
             </table>
 
