--- a/wishlist.html
+++ b/wishlist.html
@@ -187,7 +187,7 @@
                 </p>
               </td>
 
-              <td><span class="table__price">$1</span></td>
+              <td><span class="table__price">DHS. 1</span></td>
 
               <td><span class="table__stock">In Stock</span></td>
 
@@ -206,13 +206,13 @@
               </td>
 
               <td>
-                <h3 class="table__title">Amazon Essentials Women's Blouse</h3>
+                <h3 class="table__title">Very noice Dog Bed</h3>
                 <p class="table__description">
-                  It is a cloth for the womens.
+                  It is a bed for the doggies.
                 </p>
               </td>
 
-              <td><span class="table__price">$25</span></td>
+              <td><span class="table__price">DHS. 225</span></td>
 
               <td><span class="table__stock">In Stock</span></td>
 
@@ -232,14 +232,14 @@
 
               <td>
                 <h3 class="table__title">
-                  Amazon Brand - Leaf Shirt
+                  Baby PJ Baron - Leaf Shirt
                 </h3>
                 <p class="table__description">
                   Very dripy...
                 </p>
               </td>
 
-              <td><span class="table__price">$990</span></td>
+              <td><span class="table__price">DHS. 990</span></td>
 
               <td><span class="table__stock">Sold Out</span></td>
 
