--- a/shop.html
+++ b/shop.html
@@ -421,8 +421,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 119.99</span>
                   </div>
 
                   <a
@@ -479,8 +478,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 129.99</span>
                   </div>
 
                   <a
@@ -537,8 +535,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 89.99</span>
                   </div>
 
                   <a
@@ -595,8 +592,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 99.99</span>
                   </div>
 
                   <a
@@ -653,8 +649,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 79.99</span>
                   </div>
 
                   <a
@@ -711,8 +706,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 109.99</span>
                   </div>
 
                   <a
@@ -769,8 +763,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 94.99</span>
                   </div>
 
                   <a
@@ -825,8 +818,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 84.99</span>
                   </div>
 
                   <a
@@ -883,8 +875,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 79.99</span>
                   </div>
 
                   <a
@@ -941,8 +932,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 109.99</span>
                   </div>
 
                   <a
@@ -999,8 +989,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 94.99</span>
                   </div>
 
                   <a
@@ -1055,8 +1044,7 @@
                     <i class="fi fi-rs-star"></i>
                   </div>
                   <div class="product__price flex">
-                    <span class="new__price">$238.85</span>
-                    <span class="old__price">$245.8</span>
+                    <span class="new__price">DHS. 84.99</span>
                   </div>
 
                   <a
